# firered-vad

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  loc.yml
benches/: feature_extract.rs  kernels.rs  push_samples.rs
docs/superpowers/plans/: 2026-05-08-firered-vad.md
docs/superpowers/specs/: 2026-05-08-firered-vad-design.md
examples/: benchmark.rs  detect_file.rs  streaming.rs
src/: detector.rs  error.rs  event.rs  features.rs  inference.rs  lib.rs  options.rs  vad.rs
src/features/: dispatch.rs  mod.rs  scalar.rs
src/features/arch/: mod.rs  neon.rs  x86_avx2.rs  x86_avx512.rs  x86_sse41.rs
tests/: integration_test.rs
tests/parity/: README.md  fixtures.toml  run.sh  scorer.py
tests/parity/python/: requirements.txt  run.py
tests/parity/rust/: Cargo.toml
tests/parity/rust/src/: main.rs  mel_dump.rs
