[package]
name = "firered-vad"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Streaming Voice Activity Detection wrapping the FireRedVAD model via ONNX Runtime"
repository = "https://github.com/uqio/firered-vad"
documentation = "https://docs.rs/firered-vad"
readme = "README.md"
keywords = ["vad", "silero", "fireredvad", "speech", "audio"]
categories = ["multimedia::audio", "science"]

[features]
default = ["bundled"]
bundled = []
serde = ["dep:serde", "dep:humantime-serde"]
# Internal: exposes pre-inference mel features so the parity harness can
# diff them against upstream kaldi-native-fbank. Underscore prefix marks
# this as a non-stable, harness-only knob; never enable in production.
_debug-features = []
# Internal: re-exports the `dispatch` and `arch::neon` kernels publicly
# so `benches/kernels.rs` can microbench scalar vs NEON paths directly.
# Enabled automatically by the `kernels` bench via `required-features`.
_bench-internals = []
coreml = ["ort/coreml"]
directml = ["ort/directml"]
cuda = ["ort/cuda"]
rocm = ["ort/rocm"]
tensorrt = ["ort/tensorrt"]
openvino = ["ort/openvino"]

[dependencies]
ort = "=2.0.0-rc.12"
thiserror = "2"
rustfft = "6"

serde = { version = "1", optional = true, features = ["derive"] }
humantime-serde = { version = "1", optional = true }

[lib]
# `cargo bench` without this setting builds and runs the lib's `#[test]`
# harness alongside the real bench targets; that harness rejects
# `--output-format bencher` and breaks the criterion runner. We don't
# have any `#[bench]` attributes in the lib anyway, so opt out.
bench = false

[dev-dependencies]
hound = "3"
serde_json = "1"

# Criterion pulls in rayon and gettimeofday-style clocks that don't
# build cleanly for `wasm32-*` targets. Benches don't run on wasm
# anyway (timing infrastructure isn't exposed under wasi), so gate
# the dep to non-wasm hosts. Mirrors colconv's pattern.
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["html_reports"] }

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
debug-assertions = false
overflow-checks = false

[[bench]]
name = "kernels"
harness = false
required-features = ["bundled", "_bench-internals"]

[[bench]]
name = "feature_extract"
harness = false
required-features = ["bundled", "_debug-features"]

[[bench]]
name = "push_samples"
harness = false
required-features = ["bundled"]

[lints]
workspace = true

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(tarpaulin)",
  # Force the SIMD dispatcher in `src/features/dispatch.rs` to fall
  # through to the scalar reference. Set via
  # `RUSTFLAGS='--cfg firered_vad_force_scalar'` in CI / coverage runs
  # so the scalar baseline gets exercised on machines (aarch64) that
  # would otherwise always pick NEON. Mirrors colconv's
  # `colconv_force_scalar` knob.
  "cfg(firered_vad_force_scalar)",
  # Disable AVX-512 dispatch even when the host advertises `avx512f`.
  # Set via `RUSTFLAGS='--cfg firered_vad_disable_avx512'` to force the
  # AVX2 path for benchmarking or to work around buggy AVX-512 on
  # specific microarchitectures.
  "cfg(firered_vad_disable_avx512)",
  # Disable AVX2 dispatch (and by extension AVX-512, since AVX-512
  # implies AVX2 is also available). Set via
  # `RUSTFLAGS='--cfg firered_vad_disable_avx2'` to force the SSE4.1
  # path. Disabling AVX2 alone (without `firered_vad_disable_avx512`)
  # leaves AVX-512 enabled; both flags together give the SSE4.1 path.
  "cfg(firered_vad_disable_avx2)",
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "streaming"
required-features = ["bundled"]

[[example]]
name = "detect_file"
required-features = ["bundled"]
