[package]
name = "firered-vad-parity-runner"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "firered-vad-parity"
path = "src/main.rs"

[dependencies]
firered-vad = { path = "../../.." }
hound = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[workspace]
# Standalone (not a workspace member of the parent crate).
